Fixing alignment of model editor buttons

--- a/src/model-editor.less
+++ b/src/model-editor.less
@@ -596,7 +596,8 @@ select {
 				margin: 0;
 				position: absolute;
 				top: 50%;
-				-webkit-transform: translateY(-50%);
+				left: 50%;
+				-webkit-transform: translate(-50%, -50%);
 			}
 		}
 		
